Added boxlines to elements with lines before and after are now honored